@@ -25,6 +25,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+2014-01-20 Christophe Demko <chdemko@gmail.com>
+	* src/dgraph/DGraph.java, test/dgraph/DGraphTest.java:
+		^ Renaming getSizeEdges and getSizeNodes methods
+
 2014-01-12 Christophe Demko <chdemko@gmail.com>
 	* src/dgraph/*.java:
 		^ Checkstyle
